// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defineComponentAsFunction should return a function that returns component when component isValidElement 1`] = `
.c0 {
  width: 100%;
  border: 2px solid #9fa8da;
  padding: 2rem;
  color: papayawhip;
}

<div
  className="c0"
  color="papayawhip"
>
  hello
</div>
`;

exports[`defineComponentAsFunction should return a function that returns defaultComponent when defaultComponent isValidElement and component is undefined 1`] = `
.c0 {
  width: 100%;
  border: 2px solid #26a69a;
  padding: 1rem;
  color: papayawhip;
}

<div
  className="c0"
  color="papayawhip"
>
  hello
</div>
`;

exports[`defineComponentAsFunction should return component when component is a function 1`] = `
.c0 {
  width: 100%;
  border: 2px solid #9fa8da;
  padding: 2rem;
  color: papayawhip;
}

<div
  className="c0"
  color="papayawhip"
>
  hello
</div>
`;

exports[`defineComponentAsFunction should return defaultComponent when defaultComponent is a function and component is undefined 1`] = `
.c0 {
  width: 100%;
  border: 2px solid #26a69a;
  padding: 1rem;
  color: papayawhip;
}

<div
  className="c0"
  color="papayawhip"
>
  hello
</div>
`;
